--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ modules.xml
 .idea/sonarlint
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,pycharm+all
+
+#Project generated files:
+*.json
+*.html
